// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Scale snapshots renders with 0 1`] = `
<WithStyles(Scale)
  classes={Object {}}
  scale={
    Object {
      "excludeZero": false,
      "maxPoints": 1,
      "scorePointsLabels": Array [
        "A",
        "B",
      ],
      "traitLabel": "Trait",
      "traits": Array [
        Object {
          "description": "Trait 1 Description",
          "name": "Trait 1",
          "scorePointsDescriptors": Array [
            "Descriptor 0",
            "Descriptor 1",
          ],
          "standards": Array [],
        },
      ],
    }
  }
  scaleIndex={1}
>
  <Scale
    classes={
      Object {
        "scorePointHeader": "Scale-scorePointHeader-2",
        "table": "Scale-table-1",
      }
    }
    scale={
      Object {
        "excludeZero": false,
        "maxPoints": 1,
        "scorePointsLabels": Array [
          "A",
          "B",
        ],
        "traitLabel": "Trait",
        "traits": Array [
          Object {
            "description": "Trait 1 Description",
            "name": "Trait 1",
            "scorePointsDescriptors": Array [
              "Descriptor 0",
              "Descriptor 1",
            ],
            "standards": Array [],
          },
        ],
      }
    }
    scaleIndex={1}
  >
    <table
      className="Scale-table-1"
      key="scale-1"
    >
      <thead>
        <tr>
          <th>
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Trait",
                }
              }
            />
          </th>
          <th>
            Description
          </th>
          <th
            key="table-header-0"
          >
            <table
              className="Scale-scorePointHeader-2"
            >
              <thead>
                <tr>
                  <td>
                    1
                  </td>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td>
                    <div
                      dangerouslySetInnerHTML={
                        Object {
                          "__html": "B",
                        }
                      }
                    />
                  </td>
                </tr>
              </tbody>
            </table>
          </th>
          <th
            key="table-header-1"
          >
            <table
              className="Scale-scorePointHeader-2"
            >
              <thead>
                <tr>
                  <td>
                    0
                  </td>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td>
                    <div
                      dangerouslySetInnerHTML={
                        Object {
                          "__html": "A",
                        }
                      }
                    />
                  </td>
                </tr>
              </tbody>
            </table>
          </th>
        </tr>
      </thead>
      <tbody>
        <Trait
          excludeZero={false}
          key="trait_1_0"
          scaleIndex={1}
          scorePointsValues={
            Array [
              1,
              0,
            ]
          }
          showDescription={true}
          showStandards={false}
          trait={
            Object {
              "description": "Trait 1 Description",
              "name": "Trait 1",
              "scorePointsDescriptors": Array [
                "Descriptor 0",
                "Descriptor 1",
              ],
              "standards": Array [],
            }
          }
          traitIndex={0}
        >
          <tr
            key="scale-1-trait-0"
          >
            <td>
              <div
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "Trait 1",
                  }
                }
              />
            </td>
            <td>
              <div
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "Trait 1 Description",
                  }
                }
              />
            </td>
            <td
              key="table-cell-0"
            >
              <div
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "Descriptor 1",
                  }
                }
              />
            </td>
            <td
              key="table-cell-1"
            >
              <div
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "Descriptor 0",
                  }
                }
              />
            </td>
          </tr>
        </Trait>
      </tbody>
    </table>
  </Scale>
</WithStyles(Scale)>
`;

exports[`Scale snapshots renders with no score points 1`] = `
<WithStyles(Scale)
  classes={Object {}}
  scale={
    Object {
      "excludeZero": true,
      "maxPoints": 0,
      "scorePointsLabels": Array [
        "A",
        "B",
      ],
      "traitLabel": "Trait",
      "traits": Array [
        Object {
          "description": "Trait 1 Description",
          "name": "Trait 1",
          "scorePointsDescriptors": Array [
            "Descriptor 0",
            "Descriptor 1",
          ],
          "standards": Array [],
        },
      ],
    }
  }
  scaleIndex={1}
>
  <Scale
    classes={
      Object {
        "scorePointHeader": "Scale-scorePointHeader-2",
        "table": "Scale-table-1",
      }
    }
    scale={
      Object {
        "excludeZero": true,
        "maxPoints": 0,
        "scorePointsLabels": Array [
          "A",
          "B",
        ],
        "traitLabel": "Trait",
        "traits": Array [
          Object {
            "description": "Trait 1 Description",
            "name": "Trait 1",
            "scorePointsDescriptors": Array [
              "Descriptor 0",
              "Descriptor 1",
            ],
            "standards": Array [],
          },
        ],
      }
    }
    scaleIndex={1}
  >
    <table
      className="Scale-table-1"
      key="scale-1"
    >
      <thead>
        <tr>
          <th>
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Trait",
                }
              }
            />
          </th>
          <th>
            Description
          </th>
        </tr>
      </thead>
      <tbody>
        <Trait
          excludeZero={true}
          key="trait_1_0"
          scaleIndex={1}
          scorePointsValues={Array []}
          showDescription={true}
          showStandards={false}
          trait={
            Object {
              "description": "Trait 1 Description",
              "name": "Trait 1",
              "scorePointsDescriptors": Array [
                "Descriptor 0",
                "Descriptor 1",
              ],
              "standards": Array [],
            }
          }
          traitIndex={0}
        >
          <tr
            key="scale-1-trait-0"
          >
            <td>
              <div
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "Trait 1",
                  }
                }
              />
            </td>
            <td>
              <div
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "Trait 1 Description",
                  }
                }
              />
            </td>
          </tr>
        </Trait>
      </tbody>
    </table>
  </Scale>
</WithStyles(Scale)>
`;

exports[`Scale snapshots renders with no traits 1`] = `
<WithStyles(Scale)
  classes={Object {}}
  scale={
    Object {
      "excludeZero": false,
      "maxPoints": 1,
      "scorePointsLabels": Array [
        "A",
        "B",
      ],
      "traitLabel": "Trait",
      "traits": Array [],
    }
  }
  scaleIndex={1}
>
  <Scale
    classes={
      Object {
        "scorePointHeader": "Scale-scorePointHeader-2",
        "table": "Scale-table-1",
      }
    }
    scale={
      Object {
        "excludeZero": false,
        "maxPoints": 1,
        "scorePointsLabels": Array [
          "A",
          "B",
        ],
        "traitLabel": "Trait",
        "traits": Array [],
      }
    }
    scaleIndex={1}
  >
    <table
      className="Scale-table-1"
      key="scale-1"
    >
      <thead>
        <tr>
          <th>
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Trait",
                }
              }
            />
          </th>
          <th
            key="table-header-0"
          >
            <table
              className="Scale-scorePointHeader-2"
            >
              <thead>
                <tr>
                  <td>
                    1
                  </td>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td>
                    <div
                      dangerouslySetInnerHTML={
                        Object {
                          "__html": "B",
                        }
                      }
                    />
                  </td>
                </tr>
              </tbody>
            </table>
          </th>
          <th
            key="table-header-1"
          >
            <table
              className="Scale-scorePointHeader-2"
            >
              <thead>
                <tr>
                  <td>
                    0
                  </td>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td>
                    <div
                      dangerouslySetInnerHTML={
                        Object {
                          "__html": "A",
                        }
                      }
                    />
                  </td>
                </tr>
              </tbody>
            </table>
          </th>
        </tr>
      </thead>
      <tbody />
    </table>
  </Scale>
</WithStyles(Scale)>
`;

exports[`Scale snapshots renders without 0 1`] = `
<WithStyles(Scale)
  classes={Object {}}
  scale={
    Object {
      "excludeZero": true,
      "maxPoints": 1,
      "scorePointsLabels": Array [
        "A",
        "B",
      ],
      "traitLabel": "Trait",
      "traits": Array [
        Object {
          "description": "Trait 1 Description",
          "name": "Trait 1",
          "scorePointsDescriptors": Array [
            "Descriptor 0",
            "Descriptor 1",
          ],
          "standards": Array [],
        },
      ],
    }
  }
  scaleIndex={1}
>
  <Scale
    classes={
      Object {
        "scorePointHeader": "Scale-scorePointHeader-2",
        "table": "Scale-table-1",
      }
    }
    scale={
      Object {
        "excludeZero": true,
        "maxPoints": 1,
        "scorePointsLabels": Array [
          "A",
          "B",
        ],
        "traitLabel": "Trait",
        "traits": Array [
          Object {
            "description": "Trait 1 Description",
            "name": "Trait 1",
            "scorePointsDescriptors": Array [
              "Descriptor 0",
              "Descriptor 1",
            ],
            "standards": Array [],
          },
        ],
      }
    }
    scaleIndex={1}
  >
    <table
      className="Scale-table-1"
      key="scale-1"
    >
      <thead>
        <tr>
          <th>
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Trait",
                }
              }
            />
          </th>
          <th>
            Description
          </th>
          <th
            key="table-header-0"
          >
            <table
              className="Scale-scorePointHeader-2"
            >
              <thead>
                <tr>
                  <td>
                    1
                  </td>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td>
                    <div
                      dangerouslySetInnerHTML={
                        Object {
                          "__html": "B",
                        }
                      }
                    />
                  </td>
                </tr>
              </tbody>
            </table>
          </th>
        </tr>
      </thead>
      <tbody>
        <Trait
          excludeZero={true}
          key="trait_1_0"
          scaleIndex={1}
          scorePointsValues={
            Array [
              1,
            ]
          }
          showDescription={true}
          showStandards={false}
          trait={
            Object {
              "description": "Trait 1 Description",
              "name": "Trait 1",
              "scorePointsDescriptors": Array [
                "Descriptor 0",
                "Descriptor 1",
              ],
              "standards": Array [],
            }
          }
          traitIndex={0}
        >
          <tr
            key="scale-1-trait-0"
          >
            <td>
              <div
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "Trait 1",
                  }
                }
              />
            </td>
            <td>
              <div
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "Trait 1 Description",
                  }
                }
              />
            </td>
            <td
              key="table-cell-0"
            >
              <div
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "Descriptor 1",
                  }
                }
              />
            </td>
          </tr>
        </Trait>
      </tbody>
    </table>
  </Scale>
</WithStyles(Scale)>
`;
